hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tgeneric.php.exp
File "tgeneric.php", line 7, characters 10-14:
Invalid return type (Typing[4110])
File "tgeneric.php", line 6, characters 27-32:
This is a value of generic type Terase
File "tgeneric.php", line 4, characters 17-23:
It is incompatible with a dynamic value
File "tgeneric.php", line 11, characters 10-14:
Invalid return type (Typing[4110])
File "tgeneric.php", line 10, characters 33-38:
This is a value of generic type Treify
File "tgeneric.php", line 4, characters 17-23:
It is incompatible with a dynamic value
